# imgui-mvc-wrap

./: readme.md
DemoCode/: DemoViews.cpp  DemoViews.hpp  NodeView1.cpp  NodeView1.hpp  WidgetTestView.cpp  WidgetTestView.hpp
DemoCode/demoUICode/: imgui_node_graph_test.cpp  imgui_node_graph_test.h
DemoCode/demoUICode/impl_glfw_gl3/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
DemoCode/nseq/: TrackSeqView.cpp  TrackSeqView.hpp
GL/: glcorearb.h
GLFW/GLFW-3.3-bin-OSX/: libglfw.3.3.dylib
addons/: readme.md
addons/imguicodeeditor/: imguicodeeditor.cpp  imguicodeeditor.h  utf8helper.h
addons/imguidock/: imguidock.cpp
addons/imguinodegrapheditor/: imguinodegrapheditor.cpp  imguinodegrapheditor.h
addons/imguistring/: imguistring.h
addons/imguitabwindow/: imguitabwindow.cpp
addons/imguivariouscontrols/: imguivariouscontrols.cpp  imguivariouscontrols.h
addons/imguiyesaddons/: imguibz2.cpp  imguibz2.h  imguiemscriptenpersistentfolder.cpp  imguiemscriptenpersistentfolder.h  imguifreetype.cpp  imguifreetype.h  imguiimageeditor.cpp  imguiimageeditor.h  imguiminigames.cpp  imguiminigames.h  imguipdfviewer.cpp  imguipdfviewer.h  imguisdf.cpp  imguisdf.h  imguisoloud.h  imguisqlite3.cpp  imguisqlite3.h  imguistringifier.cpp  imguistringifier.h
addons/imguiyesaddons/imguiimageeditor_plugins/: jo_gif.cpp  lodepng.cpp  tiny_ico.h  tiny_jpeg.h
imgui/: imgui_draw.cpp
imgui-mvc-tests/imgui-mvc-demo-app/: AppController.cpp  AppController.hpp  DemoViewController.cpp  DemoViewController.hpp  TestObject.cpp  TestObject.hpp  ZoomableView.cpp  ZoomableView.hpp
imgui-mvc-tests/imgui-mvc-tests/: imgui_mvc_tests.mm
imgui-mvc-tests/imgui-mvc-tests.xcodeproj/: project.pbxproj
imgui-mvc-tests/imgui-mvc-tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
imgui-mvc-tests/imgui-mvc-tests.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
imgui-mvc-tests/imgui-mvc-tests.xcodeproj/xcuserdata/njazz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
imgui-mvc-tests/imgui-mvc-tests.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: imgui-mvc-tests.xcscheme  (+1 more)
lib/: AppControllerBase.cpp  AppControllerBase.hpp  IUAction.cpp  IUAction.hpp  IUBase.cpp  IUBase.hpp  IUDockController.cpp  IUDockController.hpp  IUImplementation.cpp  IUImplementation.hpp  IULayer.cpp  IULayer.hpp  IULayerBase.cpp  IULayerBase.hpp  IUMainMenuBase.cpp  IUMainMenuBase.hpp  IUMenuBase.cpp  IUMenuBase.hpp  IUObserver.cpp  IUObserver.hpp  IUPopupMenu.cpp  IUPopupMenu.hpp  IUShortcut.cpp  IUShortcut.hpp  IUView.cpp  IUView.cpp.autosave  IUView.hpp  IUViewController.cpp  IUViewController.hpp  IUWindowController.cpp  IUWindowController.hpp  imgui-wrap.h
main/: main.cpp
nfd/src/: nfd_cocoa.m
tests/: CMakeLists.txt  imgui_mock.cpp  test_imgui.cpp  tests_catch_main.cpp
